    Regression introduced in 1.17.0. Closes: #725437
  * Activate file triggers on disappearance more accurately, only when we know
    we are inevitably removing things.
  * Fix «dpkg-query --list» output when using multibyte character strings,
    to avoid unaligned columns and mojibake. Closes: #257505, #718541
    Based on a patch by Changwoo Ryu <cwryu@debian.org>.

  [ Updated programs translations ]
  * German (Sven Joachim).
  * Vietnamese (Trần Ngọc Quân).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * French (Christian Perrier): fix incorrectly translated sentence,
    thanks to Fabien Givors.
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Sun, 28 Jul 2013 15:06:29 +0200

dpkg (1.17.1) unstable; urgency=low

  * Man pages cleanup:
    - Make explicit that dpkg-shlibdeps -e can be used multiple times.
    - Improve documentation on how to update the available database before
      setting package selections. Suggested by Klaus Ita <koki.eml@gmail.com>.
  * Add manpages-it Replaces to dpkg due to new translated man pages.
    Reported by Alessio Gaeta <alga777@gmail.com>. Closes: #717983
  * Reword libdpkg-perl description and only list public modules.
  * Remove space before value in dpkg-parsechangelog -S option on pkg-info.mk.
    Closes: #718014
  * Make the build system install start-stop-daemon directly under /sbin,
    instead of moving it around in debian/rules.

 -- Guillem Jover <guillem@debian.org>  Sun, 28 Jul 2013 14:44:50 +0200

dpkg (1.17.0) unstable; urgency=low

  [ Guillem Jover ]
  * Switch update-alternatives back to a fatal error on out of range priority
    on --install.
  * Document dpkg-deb --debug in --help output.
  * Bump Standards-Version to 3.9.4 (no changes needed).
  * Use the new canonical dpkg git Vcs URLs.
  * Remove ancient version from zlibg1-dev Build-Depends.
  * Add compression development packages to libdpkg-dev Depends.