@@ -40,6 +40,8 @@ dpkg (1.17.2) UNRELEASED; urgency=low
   * Fix «dpkg-query --list» output when using multibyte character strings,
     to avoid unaligned columns and mojibake. Closes: #257505, #718541
     Based on a patch by Changwoo Ryu <cwryu@debian.org>.
+  * Use fully buffered output on non-tty stdout.
+    Reported by Shawn Landden <shawnlandden@gmail.com>.
 
   [ Updated programs translations ]
   * German (Sven Joachim).
